# Poetry

./: README.md  pyproject.toml
hello/scripts/: say_hello.py
